[gd_scene load_steps=11 format=3 uid="uid://dlag7mm664uul"]

[ext_resource type="Script" uid="uid://dk448fmwxx4qr" path="res://Scenes/Menus/LoadingScreen.gd" id="1_84d3u"]
[ext_resource type="Texture2D" uid="uid://75m1ps6k80ew" path="res://Addons/kenney_rolling-ball-assets/Spritesheet/rollingBall_sheet@2.png" id="2_28sho"]
[ext_resource type="PackedScene" uid="uid://dupqonwt86x83" path="res://Scenes/Misc/ball.tscn" id="3_s0y01"]

[sub_resource type="Animation" id="Animation_h4r0x"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_32d44"]
resource_name = "end_load"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -1152, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.966667)
}

[sub_resource type="Animation" id="Animation_aysu6"]
resource_name = "start_load"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1152, -0.25, 0, 0.25, 0, 0, -0.333333, 0, 0, 0),
"times": PackedFloat32Array(0, 0.933333)
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.933333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["loading_screen_has_full_coverage"],
"method": &"emit_signal"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_grdub"]
_data = {
&"RESET": SubResource("Animation_h4r0x"),
&"end_load": SubResource("Animation_32d44"),
&"start_load": SubResource("Animation_aysu6")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s0y01"]
texture = ExtResource("2_28sho")
texture_margin_right = 1.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(514, 386, 126, 124)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s0y01"]
size = Vector2(1153, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fcwhv"]
size = Vector2(17, 629)

[node name="LoadingScreen" type="CanvasLayer"]
layer = 10
script = ExtResource("1_84d3u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_grdub")
}
autoplay = "start_load"

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_s0y01")

[node name="Ball" parent="Panel" instance=ExtResource("3_s0y01")]
unique_name_in_owner = true
position = Vector2(527, 503)
collision_layer = 4
collision_mask = 12
inLoading = true

[node name="Ball2" parent="Panel" instance=ExtResource("3_s0y01")]
unique_name_in_owner = true
position = Vector2(491, 113)
collision_layer = 4
collision_mask = 12
inLoading = true

[node name="Ball3" parent="Panel" instance=ExtResource("3_s0y01")]
unique_name_in_owner = true
position = Vector2(193, 158)
collision_layer = 4
collision_mask = 12
inLoading = true

[node name="Ball4" parent="Panel" instance=ExtResource("3_s0y01")]
unique_name_in_owner = true
position = Vector2(281, 570)
collision_layer = 4
collision_mask = 12
inLoading = true

[node name="Ball5" parent="Panel" instance=ExtResource("3_s0y01")]
unique_name_in_owner = true
position = Vector2(370, 271)
collision_layer = 4
collision_mask = 12
inLoading = true

[node name="Ball6" parent="Panel" instance=ExtResource("3_s0y01")]
unique_name_in_owner = true
position = Vector2(827, 538)
collision_layer = 4
collision_mask = 12
inLoading = true

[node name="Ball7" parent="Panel" instance=ExtResource("3_s0y01")]
unique_name_in_owner = true
position = Vector2(638, 338)
collision_layer = 4
collision_mask = 12
inLoading = true

[node name="Ball8" parent="Panel" instance=ExtResource("3_s0y01")]
unique_name_in_owner = true
position = Vector2(843, 113)
collision_layer = 4
collision_mask = 12
inLoading = true

[node name="Ball9" parent="Panel" instance=ExtResource("3_s0y01")]
unique_name_in_owner = true
position = Vector2(1000, 554)
collision_layer = 4
collision_mask = 12
inLoading = true

[node name="Ball10" parent="Panel" instance=ExtResource("3_s0y01")]
unique_name_in_owner = true
position = Vector2(951, 271)
collision_layer = 4
collision_mask = 12
inLoading = true

[node name="StaticBody2D" type="StaticBody2D" parent="Panel"]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Panel/StaticBody2D"]
position = Vector2(576.5, 0)
shape = SubResource("RectangleShape2D_s0y01")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Panel/StaticBody2D"]
position = Vector2(577, 648)
shape = SubResource("RectangleShape2D_s0y01")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Panel/StaticBody2D"]
position = Vector2(0, 322)
shape = SubResource("RectangleShape2D_fcwhv")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Panel/StaticBody2D"]
position = Vector2(1152, 323)
shape = SubResource("RectangleShape2D_fcwhv")

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -13.0
offset_right = 210.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
